--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
     "styled-components": "^5.3.8",
+    "swiper": "^9.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
